# shisue

./: .gitignore  LICENSE  pyproject.toml
config/: config.yaml  data.yaml  model.yaml  training.yaml
notebooks/: 01_eda.ipynb
src/shisue/data/: dataset.py  split.py  transform.py
src/shisue/models/: components.py  decoder.py  resnet.py  transformer.py  transunet.py
src/shisue/scripts/: train.py
src/shisue/training/: losses.py  metrics.py  trainer.py
src/shisue/utils/: config.py  exceptions.py  logger.py
